force-app/main/default/objects/User/fields/Is_Production__c.field-meta.xml
<CustomField>
    <fullName>Is_Production__c</fullName>
    <description>Determine if we are on PROD or Sandbox</description>
    <formula>IF(CONTAINS(LEFT($Api.Partner_Server_URL_550, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_550)),&apos;--&apos;), FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>TRUE - SF Production server
FALSE - SF Sandbox server</inlineHelpText>
    <label>Is Production</label>
    <type>Checkbox</type>
</CustomField>