force-app/main/default/objects/User/fields/Is_System_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Is_System_Administrator__c</fullName>
    <description>Used in components to show section for admins only.</description>
    <formula>Profile.Name = &quot;System Administrator&quot;</formula>
    <inlineHelpText>Checked if User is an Administrator.</inlineHelpText>
    <label>Is System Administrator</label>
    <type>Checkbox</type>
</CustomField>