force-app/main/default/objects/User/fields/SF_Instance_base_URL__c.field-meta.xml
<CustomField>
    <fullName>SF_Instance_base_URL__c</fullName>
    <description>Accessible in formulas using $User.SF_Instance_base_URL__c</description>
    <formula>LEFT($Api.Partner_Server_URL_560, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_560))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SF Instance (sandbox or PROD) base URL. Can be used in email templates together with record Id. $User.SF_Instance_base_URL__c &amp; Id</inlineHelpText>
    <label>SF Instance base URL</label>
    <type>Text</type>
</CustomField>