force-app/main/default/objects/User/fields/SF_Instance_is_Production__c.field-meta.xml
<CustomField>
    <fullName>SF_Instance_is_Production__c</fullName>
    <description>Determine if we are on PROD or Sandbox.
Accessible in formulas using $User.SF_Instance_is_Production__c</description>
    <formula>IF(CONTAINS(LEFT($Api.Partner_Server_URL_560, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_560)),&apos;--&apos;), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>TRUE - SF Production server
FALSE - SF Sandbox server</inlineHelpText>
    <label>SF Instance is Production?</label>
    <type>Checkbox</type>
</CustomField>